--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
 	"author": "useful programmer",
+  "description: a web app that helps people",
 	"name": "fcc-learn-npm-package-json",
+  "keywords: ["Useful Programmer", "freecodecamp", "Learn to be a Programmer"],
 	"dependencies": {
 		"express": "^4.14.0"
 	},
